<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.seba.astroweather.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="AstroWeather cz.2"
        android:textSize="22sp" />

    <Button
        android:id="@+id/astro1Button"
        android:layout_width="230dp"
        android:layout_height="4dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:text="@string/astro1" />

    <Button
        android:id="@+id/astro2Button"
        android:layout_width="230dp"
        android:layout_height="4dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/astro2" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="230dp"
        android:layout_height="4dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/exit" />

</LinearLayout>
