<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.seba.astroweather.fragment.WeatherFragment">

    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeRefreshWeather"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="20dp"
                        android:layout_weight="2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day"
                        android:textSize="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min"
                        android:textSize="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max"
                        android:textSize="20sp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="0"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/condition"
                        android:textSize="20sp"
                        android:layout_weight="0"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/forecast1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="24dp"
                        android:layout_weight="2"/>

                    <ImageView
                        android:id="@+id/forecastImage1"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/weather" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/forecast2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="24dp"
                        android:layout_weight="2"/>

                    <ImageView
                        android:id="@+id/forecastImage2"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/weather" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/forecast3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="24dp"
                        android:layout_weight="2"/>

                    <ImageView
                        android:id="@+id/forecastImage3"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/weather" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/forecast4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="24dp"
                        android:layout_weight="2"/>

                    <ImageView
                        android:id="@+id/forecastImage4"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/weather" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/forecast5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="24dp"
                        android:layout_weight="2"/>

                    <ImageView
                        android:id="@+id/forecastImage5"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/weather" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/forecast6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="24dp"
                        android:layout_weight="2"/>

                    <ImageView
                        android:id="@+id/forecastImage6"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/weather" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/forecast7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="none"
                        android:textSize="24dp"
                        android:layout_weight="2"/>

                    <ImageView
                        android:id="@+id/forecastImage7"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/weather" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</FrameLayout>